--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ pydantic==1.10.2
 python-dotenv==0.21.0
 PyYAML==6.0
 requests==2.28.1
-revChatGPT==0.0.25
+# revChatGPT==0.0.25
+revChatGPT==2.3.16
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 starlette==0.22.0
